kustomize/stirling-pdf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stirling-pdf
  namespace: stirling-pdf
  labels:
    app.kubernetes.io/name: stirling-pdf
    app.kubernetes.io/instance: stirling-pdf
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/component: service
    app.kubernetes.io/part-of: stirling-pdf
    app.kubernetes.io/managed-by: flux
  annotations:
    description: "Service for Stirling PDF application."
spec:
  selector:
    app: stirling-pdf
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
